* calls.c (stored_args_map): New variable. 	(check_sibcall_argument_overlap_1): New. 	(check_sibcall_argument_overlap): New. 	(expand_call): Initialize stored_args_map. 	Call check_sibcall_argument_overlap.
	* gcc.c-torture/execute/20000707-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35017 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-07-13  Jakub Jelinek  <jakub@redhat.com>
+
+	* calls.c (stored_args_map): New variable.
+	(check_sibcall_argument_overlap_1): New.
+	(check_sibcall_argument_overlap): New.
+	(expand_call): Initialize stored_args_map.
+	Call check_sibcall_argument_overlap.
+
 2000-07-13  Bruce Korb  <bkorb@gnu.org>
 
 	* fixinc/fixfixes.c: move EXIT_BROKEN to header, add sub-expr max count
