--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-13  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20000707-1.c: New test.
+
 2000-07-13  Neil Booth  <NeilB@earthling.net>
 
 	* testsuite/gcc.dg/cpp/digraph1.c,
