--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-13  Tom Tromey  <tromey@cygnus.com>
+
+	* lang-specs.h: Added %{I*}.
+
 2000-07-13  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* lang-specs.h: Use the new named specs.  Remove unnecessary braces.
