--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* system.h (alloca): Prototype if __GNUC__ && __SIZE_TYPE__.
+
 2000-07-13  Jakub Jelinek  <jakub@redhat.com>
 
 	* calls.c (stored_args_map): New variable.
