--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2000-07-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
+	* cpphash.c (macro_info): Don't use the `signed' keyword.
+
 	* system.h (alloca): Prototype if __GNUC__ && __SIZE_TYPE__.
 
 2000-07-13  Jakub Jelinek  <jakub@redhat.com>
