* cpplex.c (adjust_column): New funcion. 	(skip_whitespace): Use it. 	(skip_block_comment): Use it, and warn about /*/* with 	-Wcomments.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35026 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2000-07-14  Neil Booth  <NeilB@earthling.net>
 
+	* cpplex.c (adjust_column): New funcion.
+	(skip_whitespace): Use it.
+	(skip_block_comment): Use it, and warn about /*/* with
+	-Wcomments.
+
+2000-07-14  Neil Booth  <NeilB@earthling.net>
+
 	* cpphash.c (struct macro_info): Add new members.
 	(_cpp_free_definition): Delete the macro directly.
 	(count_params): Return void, with first token of
