* .cvsignore: Add generated YACC files. 	* objc/.cvsignore: New file.
	* .cvsignore: New file.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35028 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-13  Mark Mitchell  <mark@codesourcery.com>
+
+	* .cvsignore: Add generated YACC files.
+	* objc/.cvsignore: New file.
+	
 2000-07-14  Neil Booth  <NeilB@earthling.net>
 
 	* cpplex.c (adjust_column): New funcion.
