--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-13  Mark Mitchell  <mark@codesourcery.com>
+
+	* .cvsignore: New file.
+
 2000-07-13  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* lang-specs.h: Use the new named specs.  Remove unnecessary braces.
