--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-13  Mark Mitchell  <mark@codesourcery.com>
+
+	* parse.c: Remove.
+
 2000-07-13  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* parse.y (fold_constant_for_init): Avoid bullish conversion.
