--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-14  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* .cvsignore: Correct typo.
+
 2000-07-13  Mark Mitchell  <mark@codesourcery.com>
 
 	* .cvsignore: Add generated YACC files.
