--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-14  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* .cvsignore: parse.h and parse.c have no cp- prefix.
+
 2000-07-13  Mark Mitchell  <mark@codesourcery.com>
 
 	* .cvsignore: New file.
