--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-14  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* .cvsignore: New file.
+
 2000-07-13  Mark Mitchell  <mark@codesourcery.com>
 
 	* parse.c: Remove.
