--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-14  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* cpplib.c (do_pragma_dependency): Tidy warning messages.
+
 2000-07-14  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* .cvsignore: Correct typo.
