--- a/libstdc++/ChangeLog
+++ b/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-14  Jean-Francois Panisset <panisset@discreet.com>
+	
+	* std/bastring.h (basic_string<>::clear): Add function.
+
 2000-07-06  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* std/gslice_array.h, std/indirect_array.h, std/mask_array.h,
