--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul 14 18:13:23 2000  Mark P Mitchell  <mark@codesourcery.com>
+
+	* config/mh-irix6 (CC): Don't set it.
+
 2000-07-07  Phil Edwards  <pme@sourceware.cygnus.com>
 
 	* symlink-tree:  Check number of arguments.
