* README.Portability:  Small update.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35040 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-07-15  Neil Booth  <NeilB@earthling.net>
 
+	* README.Portability: Small update.
+
+2000-07-15  Neil Booth  <NeilB@earthling.net>
+
 	* README.Portability: New file.
 
 Fri Jul 14 18:13:53 2000  Mark P Mitchell  <mark@codesourcery.com>
