* README.Portability: Correct example about calling a function 	through a pointer to function.  Format wide paragraphs.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35043 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-15  Neil Booth  <NeilB@earthling.net>
+
+	* README.Portability: Correct example about calling a function
+	through a pointer to function.  Format wide paragraphs.
+
 2000-07-15  Michael Meissner  <meissner@redhat.com>
 
 	* README.Portability: Update integer suffixes and function
