* fold-const.c (extract_muldiv): Don't optimize past an unsigned         cast around an expression.  Tidy other unsigned tests.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35049 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-15  Richard Henderson  <rth@cygnus.com>
+
+	* fold-const.c (extract_muldiv): Don't optimize past an unsigned
+	cast around an expression.  Tidy other unsigned tests.
+
 2000-07-15  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* diagnostic.c (doing_line_wrapping, line_wrapper_printf, notice,
