--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,6 +1,7 @@
 2000-07-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/20000715-2.c: New test.
+	* gcc.dg/20000715-1.c: New test.
 
 2000-07-15  Michael Meissner  <meissner@redhat.com>
 
