* config/ia64/ia64-protos.h (ia64_move_ok): Prototype.         * config/ia64/ia64.c (ia64_move_ok): New function.         * config/ia64/ia64.md (movqi, movqi_internal): Use it.         (movhi, movsi, movdi, movsf, movdf, movxf): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35054 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-07-15  Richard Henderson  <rth@cygnus.com>
+
+	* config/ia64/ia64-protos.h (ia64_move_ok): Prototype.
+	* config/ia64/ia64.c (ia64_move_ok): New function.
+	* config/ia64/ia64.md (movqi, movqi_internal): Use it.
+	(movhi, movsi, movdi, movsf, movdf, movxf): Likewise.
+
 2000-07-15  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cpphash.c (save_expansion): Clear PREV_WHITE on tokens
