--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-16  Neil Booth  <NeilB@earthling.net>
+
+	* README.Portability:  Small update.
+
 2000-07-15  Richard Henderson  <rth@cygnus.com>
 
 	* config/ia64/ia64-protos.h (ia64_move_ok): Prototype.
