* cpplex.c: Update comments. 	* README.Portability: Small update.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35058 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2000-07-16  Neil Booth  <NeilB@earthling.net>
 
+	* cpplex.c: Update comments.
+	* README.Portability: Small update.
+
+2000-07-16  Neil Booth  <NeilB@earthling.net>
+
 	* README.Portability:  Small update.
 
 2000-07-15  Richard Henderson  <rth@cygnus.com>
