--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* fixinc/fixfixes.c (emit_gnu_type): Avoid string concatenation.
+
 2000-07-16  Neil Booth  <NeilB@earthling.net>
 
 	* cpplex.c: Update comments.
