2000-07-17  Gabriel Dos Reis  <gdr@codesourcery.com>
	* std/valarray_array.h(__valarray_sum): Make inline.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35071 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++/ChangeLog
+++ b/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-17  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* std/valarray_array.h(__valarray_sum): Make inline.
+
 2000-07-15  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* std/valarray_array.h (__valarray_get_memory,
