* fold-const.c: Fix comment typos.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35072 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-17  Kazu Hirata  <kazu@hxi.com>
+
+	* fold-const.c: Fix comment typos.
+
 2000-07-16  Laurynas Biveinis  <lauras@softhome.net>
 
 	* cppfiles.c (read_name_map): Set map_list_ptr->map_list_map to NULL.
