--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,13 @@
+2000-07-17  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/c90-enum-comma-1.c, gcc.dg/c90-idem-qual-1.c,
+	gcc.dg/c90-impl-decl-1.c, gcc.dg/c90-impl-int-1.c,
+	gcc.dg/c90-longlong.c, gcc.dg/c90-restrict-1.c,
+	gcc.dg/c90-return-1.c, gcc.dg/c99-enum-comma-1.c,
+	gcc.dg/c99-idem-qual-1.c, gcc.dg/c99-impl-decl-1.c,
+	gcc.dg/c99-impl-int-1.c, gcc.dg/c99-longlong-1.c,
+	gcc.dg/c99-restrict-1.c, gcc.dg/c99-return-1.c: New tests.
+
 Mon Jul 17 00:41:57 2000   Greg McGary <greg@mcgary.org>
 
 	* gcc.c-torture/execute/20000717-1.c: New test.
