* gcc.dg/c90-digraph-1.c, gcc.dg/c94-digraph.c, 	gcc.dg/c99-digraph.c: New tests.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35078 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,15 +1,18 @@
 2000-07-17  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* gcc.dg/c90-digraph-1.c, gcc.dg/c94-digraph.c,
+	* gcc.dg/c99-digraph.c: New tests.
+
 	* gcc.dg/c90-hexfloat-1.c, gcc.dg/c90-hexfloat-2.c,
-	gcc.dg/c99-hexfloat-1.c, gcc.dg/c99-hexfloat-2.c: New tests.
+	* gcc.dg/c99-hexfloat-1.c, gcc.dg/c99-hexfloat-2.c: New tests.
 
 	* gcc.dg/c90-enum-comma-1.c, gcc.dg/c90-idem-qual-1.c,
-	gcc.dg/c90-impl-decl-1.c, gcc.dg/c90-impl-int-1.c,
-	gcc.dg/c90-longlong.c, gcc.dg/c90-restrict-1.c,
-	gcc.dg/c90-return-1.c, gcc.dg/c99-enum-comma-1.c,
-	gcc.dg/c99-idem-qual-1.c, gcc.dg/c99-impl-decl-1.c,
-	gcc.dg/c99-impl-int-1.c, gcc.dg/c99-longlong-1.c,
-	gcc.dg/c99-restrict-1.c, gcc.dg/c99-return-1.c: New tests.
+	* gcc.dg/c90-impl-decl-1.c, gcc.dg/c90-impl-int-1.c,
+	* gcc.dg/c90-longlong.c, gcc.dg/c90-restrict-1.c,
+	* gcc.dg/c90-return-1.c, gcc.dg/c99-enum-comma-1.c,
+	* gcc.dg/c99-idem-qual-1.c, gcc.dg/c99-impl-decl-1.c,
+	* gcc.dg/c99-impl-int-1.c, gcc.dg/c99-longlong-1.c,
+	* gcc.dg/c99-restrict-1.c, gcc.dg/c99-return-1.c: New tests.
 
 Mon Jul 17 00:41:57 2000   Greg McGary <greg@mcgary.org>
 
