--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+Mon Jul 17 02:37:06 2000  Marc Espie <espie@openbsd.org>
+
+	* configure.in (vax-*-openbsd):  Change to new style configuration,
+	add collect2/float_format information.
+	* configure:  Rebuilt.
+	* config/vax/openbsd1.h:  New.
+	* config/vax/openbsd.h:  New.
+	* config/vax/t-openbsd:  New.
+
 2000-07-17  Chip Salzenberg  <chip@valinux.com>
 
 	* c-common.c (shorten_compare): Quiet warnings about unsigned
