* simplify-rtx.c (simplify_relational_operation): Two signed values with equal high words are less/greater than each other if their low words are less/greater when considered as unsigned.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35080 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-17  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* gcc.c-torture/execute/20000717-2.c: New test.
+
 2000-07-17  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/c90-digraph-1.c, gcc.dg/c94-digraph.c,
