--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-17  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* simplify-rtx.c (simplify_relational_operation): Two signed
+	values with equal high words are less/greater than each other if
+	their low words are less/greater when considered as unsigned.
+
 Mon Jul 17 02:37:06 2000  Marc Espie <espie@openbsd.org>
 
 	* configure.in (vax-*-openbsd):  Change to new style configuration,
