* gcc.dg/formatz-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35082 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -4,6 +4,8 @@
 
 2000-07-17  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* gcc.dg/formatz-1.c: New test.
+
 	* gcc.dg/c90-digraph-1.c, gcc.dg/c94-digraph.c,
 	* gcc.dg/c99-digraph.c: New tests.
 
