--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jul 17 03:13:12 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* gcc.c-torture/compile/20000717-1.c: New test.
+
 2000-07-17  Geoffrey Keating  <geoffk@cygnus.com>
 
 	* gcc.c-torture/execute/20000717-2.c: New test.
